mlruns duration prediction

--- a/02-experiment-tracking/course-notes/duration-prediction.ipynb
+++ b/02-experiment-tracking/course-notes/duration-prediction.ipynb
@@ -2,26 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "dc0a6d65",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python 3.9.23\n"
+     ]
+    }
+   ],
    "source": [
     "!python -V"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "c70c6dcc",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import pickle\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
+    "import numpy as np\n",
     "\n",
     "\n",
     "from sklearn.feature_extraction import DictVectorizer\n",
@@ -32,29 +42,52 @@
     "from sklearn.metrics import mean_squared_error\n",
     "\n",
     "import mlflow\n",
-    "import xgboost as xgb\n"
+    "import xgboost as xgb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "9bfbecaa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/07/01 21:01:54 INFO mlflow.store.db.utils: Creating initial MLflow database tables...\n",
+      "2025/07/01 21:01:54 INFO mlflow.store.db.utils: Updating database tables\n",
+      "INFO  [alembic.runtime.migration] Context impl SQLiteImpl.\n",
+      "INFO  [alembic.runtime.migration] Will assume non-transactional DDL.\n",
+      "INFO  [alembic.runtime.migration] Context impl SQLiteImpl.\n",
+      "INFO  [alembic.runtime.migration] Will assume non-transactional DDL.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Experiment: artifact_location='/workspaces/mlops-zoomcamp/02-experiment-tracking/course-notes/mlruns/1', creation_time=1751397893692, experiment_id='1', last_update_time=1751397893692, lifecycle_stage='active', name='nyc-taxi-experiment', tags={}>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "mlflow.set_tracking_uri(\"sqlite:///mlflow.db\")\n",
-    "mlflow.set_experiment(\"nyc-taxi-experiment\")\n"
+    "mlflow.set_experiment(\"nyc-taxi-experiment\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "260c40ff",
    "metadata": {},
    "outputs": [],
    "source": [
     "def read_dataframe(filename):\n",
-    "    df = pd.read_csv(filename)\n",
+    "    df = pd.read_parquet(filename)\n",
     "\n",
     "    df.lpep_dropoff_datetime = pd.to_datetime(df.lpep_dropoff_datetime)\n",
     "    df.lpep_pickup_datetime = pd.to_datetime(df.lpep_pickup_datetime)\n",
@@ -72,28 +105,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "fc2671b5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_train = read_dataframe('./data/green_tripdata_2021-01.csv')\n",
-    "df_val = read_dataframe('./data/green_tripdata_2021-02.csv')"
+    "df_train = read_dataframe('https://d37ci6vzurychx.cloudfront.net/trip-data/green_tripdata_2021-01.parquet')\n",
+    "df_val = read_dataframe('https://d37ci6vzurychx.cloudfront.net/trip-data/green_tripdata_2021-02.parquet')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "e99a22d8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(73908, 61921)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(df_train), len(df_val)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "5ba56907",
    "metadata": {},
    "outputs": [],
@@ -104,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "b8cc66a4",
    "metadata": {},
    "outputs": [],
@@ -115,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "4e8b20fc",
    "metadata": {},
    "outputs": [],
@@ -140,12 +184,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "51f6b717",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(7.758715209663881)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "mean_squared_error(y_val, y_pred, squared=False)"
+    "np.sqrt(mean_squared_error(y_val, y_pred))"
    ]
   },
   {
@@ -155,15 +210,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('models/lin_reg.bin', 'wb') as f_out:\n",
+    "with open('./models/lin_reg.bin', 'wb') as f_out:\n",
     "    pickle.dump((dv, lr), f_out)\n",
     "\n",
     "with mlflow.start_run():\n",
     "\n",
-    "    mlflow.set_tag(\"developer\", \"cristian\")\n",
+    "    mlflow.set_tag(\"developer\", \"mahitha\")\n",
     "\n",
-    "    mlflow.log_param(\"train-data-path\", \"./data/green_tripdata_2021-01.csv\")\n",
-    "    mlflow.log_param(\"valid-data-path\", \"./data/green_tripdata_2021-02.csv\")\n",
+    "    mlflow.log_param(\"train-data-path\", \"https://d37ci6vzurychx.cloudfront.net/trip-data/green_tripdata_2021-01.parquet\")\n",
+    "    mlflow.log_param(\"valid-data-path\", \"https://d37ci6vzurychx.cloudfront.net/trip-data/green_tripdata_2021-02.parquet\")\n",
     "\n",
     "    alpha = 0.1\n",
     "    mlflow.log_param(\"alpha\", alpha)\n",
@@ -171,10 +226,10 @@
     "    lr.fit(X_train, y_train)\n",
     "\n",
     "    y_pred = lr.predict(X_val)\n",
-    "    rmse = mean_squared_error(y_val, y_pred, squared=False)\n",
+    "    rmse = np.sqrt(mean_squared_error(y_val, y_pred))\n",
     "    mlflow.log_metric(\"rmse\", rmse)\n",
     "\n",
-    "    mlflow.log_artifact(local_path=\"models/lin_reg.bin\", artifact_path=\"models_pickle\")"
+    "    mlflow.log_artifact(local_path=\"./models/lin_reg.bin\", artifact_path=\"models_pickle\")"
    ]
   },
   {
@@ -202,7 +257,7 @@
     "            early_stopping_rounds=50\n",
     "        )\n",
     "        y_pred = booster.predict(valid)\n",
-    "        rmse = mean_squared_error(y_val, y_pred, squared=False)\n",
+    "        rmse = np.sqrt(mean_squared_error(y_val, y_pred))\n",
     "        mlflow.log_metric(\"rmse\", rmse)\n",
     "\n",
     "    return {'loss': rmse, 'status': STATUS_OK}"
@@ -249,18 +304,25 @@
     "for model_class in (RandomForestRegressor, GradientBoostingRegressor, ExtraTreesRegressor, LinearSVR):\n",
     "\n",
     "    with mlflow.start_run():\n",
-    "\n",
-    "        mlflow.log_param(\"train-data-path\", \"./data/green_tripdata_2021-01.csv\")\n",
-    "        mlflow.log_param(\"valid-data-path\", \"./data/green_tripdata_2021-02.csv\")\n",
-    "        mlflow.log_artifact(\"models/preprocessor.b\", artifact_path=\"preprocessor\")\n",
+    "        mlflow.log_param(\"train-data-path\", \"https://d37ci6vzurychx.cloudfront.net/trip-data/green_tripdata_2021-01.parquet\")\n",
+    "        mlflow.log_param(\"valid-data-path\", \"https://d37ci6vzurychx.cloudfront.net/trip-data/green_tripdata_2021-02.parquet\")\n",
+    "        mlflow.log_artifact(\"./models/\", artifact_path=\"preprocessor\")\n",
     "\n",
     "        mlmodel = model_class()\n",
     "        mlmodel.fit(X_train, y_train)\n",
     "\n",
     "        y_pred = mlmodel.predict(X_val)\n",
-    "        rmse = mean_squared_error(y_val, y_pred, squared=False)\n",
+    "        rmse = np.sqrt(mean_squared_error(y_val, y_pred))\n",
     "        mlflow.log_metric(\"rmse\", rmse)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8aad46d3-881c-41b6-904a-ba04e3916b6f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -279,7 +341,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.23"
   }
  },
  "nbformat": 4,
